# dc_schema

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
dataclass_schema/: dataclass_schema.py
dc_schema/: __init__.py  cli.py
tests/: test_dataclass_schema.py  test_dc_schema.py
