[tool.poetry]
name = "dataclass_schema"
version = "0.0.1"
description = ""
authors = ["Peter Byfield <byfield554@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
jsonschema = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
