[tool.poetry]
name = "dc_schema"
version = "0.0.8"
description = "Generate JSON schema from python dataclasses"
authors = ["Peter Byfield <byfield554@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Peter554/dc_schema"
repository = "https://github.com/Peter554/dc_schema"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
jsonschema = "^4.4.0"
mypy = "^0.942"
types-jsonschema = "^4.4.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dc_schema = 'dc_schema.cli:main'
